add stockholm settings